--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Swagger explorer</title>
+    <title>SMSFoo API explorer</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -46,7 +46,7 @@
             if (url && url.length > 1) {
                 url = decodeURIComponent(url[1]);
             } else {
-                url = window.location.toString().replace(/\/*#?.*/, '/swagger.json');
+                url = window.location.toString().replace(/\/*#?.*/, '/swagger.yml');
             }
 
             window.swaggerUi = new SwaggerUi({
@@ -209,13 +209,12 @@
                 <button type="button" data-toggle="collapse" data-target="#navbar-collapse" class="navbar-toggle"><span
                         class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
                         class="icon-bar"></span><span class="icon-bar"></span></button>
-                <h1 class="navbar-brand"><a href="http://swagger.io"><span>swagger explorer</span></a></h1>
+                <h1 class="navbar-brand"><a href="#"><span>Here</span></a></h1>
             </div>
             <div id="navbar-collapse" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-left">
-                    <li class="li-why"><a href="http://swagger.io" style="font-size: 25px; padding-left: 0px">Swagger
-                        explorer</a></li>
-
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="li-why"><a href="https://smsfoo.com" style="padding-left: 10px">About</a></li>
+                    <li class="li-why"><a href="https://app.smsfoo.com" style="padding-left: 10px">Login</a></li>
                 </ul>
             </div>
         </div>
